<resources>
    <string name="app_name"> My Ecommerce</string>
    <string name="sign_up"><U>Sign Up</U></string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="please_accept_terms_and_condition"><u>Please accept terms and condition</u></string>
    <string name="product_details">Product Details</string>
    <string name="dummy_text">"Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum "</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="Help">Help</string>
    <string name="please_read">Please Read For Help</string>
    <string name="About">About</string>
    <string name="please_read_about">Please Read About</string>
    <string name="profile">Profile</string>
    <string name="setting">Setting</string>
    <string name="my_ecommerce">My Ecommerce</string>
    <string name="offer">Offer</string>
    <string name="privacy_and_policy">Privacy and Policy</string>
    <string name="add_address">Add Address</string>
    <string name="please_add_items_to_cart">Please add items to Cart</string>
    <string name="full_name">Full Name *</string>
    <string name="address_line_1">Address Line 1 *</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="zip_code">Zip Code *</string>
    <string name="town_city">Town City *</string>
    <string name="state">State *</string>
    <string name="go_to_payment">Go to Payment</string>
    <string name="ecommerce">Ecommerce</string>
    <string name="total_price">Total Price :</string>
    <string name="checkout">CheckOut</string>
    <string name="description">Description:</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="help">Help</string>
    <string name="please_read_for_help">Please Read For Help</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="notifications">Notifications</string>
    <string name="succesfull">Succesfull</string>
    <string name="your_order_has_been_placed_successfully">Your Order Has Been Placed Successfully</string>
    <string name="enter_card_details">Enter Card Details</string>
    <string name="credit_card_number">Credit Card Number</string>
    <string name="valid_thru">Valid thru</string>
    <string name="cvv">CVV</string>
    <string name="card_holder_s_name">Card holder\'s name</string>
    <string name="pay_now">Pay now</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="upload_image">Upload Image</string>
    <string name="your_first_name">Your First Name</string>
    <string name="your_last_name">Your Last Name</string>
    <string name="your_email">your Email</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="no_search_result">No Search Result</string>
    <string name="no_internet_connectivity_nretry">No Internet Connectivity\nRetry</string>
    <string name="limited_offers_24_hrs_only">Limited Offers| 24 Hrs Only</string>
    <string name="rapid_fire_deals">Rapid Fire Deals</string>
    <string name="limited_stock_24_hrs_only">Limited Stock | 24 Hrs Only</string>
    <string name="ends_in">Ends in</string>
    <string name="account">Account</string>
    <string name="notification">Notification</string>
    <string name="appearance">Appearance</string>
    <string name="privacy_and_security">Privacy and security</string>
    <string name="help_and_support">Help and Support</string>
    <string name="about">About</string>
    <string name="version_1_0_0">Version: 1.0.0</string>
    <string name="grab_dream_deals_at_just_rs_1">Grab Dream Deals at Just Rs.1</string>
    <string name="product_name">Product Name</string>
    <string name="limited_offers">Limited Offers</string>
    <string name="payment_method">Payment Method</string>
    <string name="credit_card">Credit Card</string>
    <string name="cash">Cash</string>
    <string name="qr_scan">QR Scan</string>
    <string name="wallet">Wallet</string>
    <string name="continuee">Continue</string>
    <string name="textsend">This is my text to send.</string>
    <string name="help_pleasw">help</string>
    <string name="logout">Logout</string>
    <string name="sure_logout">Are you sure want to Logout</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="grab_deales">Grab Dream Deals at Just Rs.1</string>
    <string name="yy">YY</string>
    <string name="mm">MM</string>
    <string name="cvvinfo">The CVV/CVC code (Card Verification Value/Code) is located on the back of your credit/debit card on the right side of the white signature strip; it is always the last 3 digits in case of VISA and MasterCard.</string>
    <string name="my_pref">My_pref</string>
    <string name="terms_contion_url">https://www.termsfeed.com/live/b506f00c-22ca-4910-b820-e9d8eacec9ac</string>
    <string name="home">Home</string>
    <string name="offers">Offers</string>
    <string name="price_high_to_low">Price High to Low</string>
    <string name="price_low_to_high">Price Low to High</string>
    <string name="my_account">My Account</string>
</resources>
