<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.PaymentDetailActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="top"
        android:background="@color/white"
        android:contentInsetStart="0dp"
        android:contentInsetLeft="0dp"
        android:contentInsetEnd="0dp"
        android:contentInsetRight="0dp"
        android:elevation="5dp"
        app:contentInsetEnd="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetStart="0dp"
        app:layout_collapseMode="pin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:gravity="center_vertical">


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/image_back" />

            <com.friendspire.myecommerce.utils.views.CustomView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:text="@string/enter_card_details"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/label_card_number"
        android:layout_width="wrap_content"
        android:fontFamily="@font/titania_regular"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:text="@string/credit_card_number"
        android:textColor="#3A4455"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edittext_card_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:inputType="number"
        android:fontFamily="@font/titania_regular"
        android:backgroundTint="#3A4455"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_card_number" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_visa"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="5dp"
        android:visibility="gone"
        android:src="@drawable/img_visa"
        app:layout_constraintBottom_toBottomOf="@+id/edittext_card_number"
        app:layout_constraintEnd_toEndOf="@+id/edittext_card_number"
        app:layout_constraintTop_toTopOf="@+id/edittext_card_number" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/label_valid"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/titania_regular"
        android:text="@string/valid_thru"
        android:gravity="bottom"
        android:textColor="#3A4455"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/label_cvv"
        app:layout_constraintStart_toStartOf="@+id/edittext_card_number"
        app:layout_constraintTop_toBottomOf="@+id/edittext_card_number" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/label_cvv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:gravity="bottom"
        android:fontFamily="@font/titania_regular"
        android:drawableEnd="@drawable/img_ques"
        android:text="@string/cvv"
        android:textColor="#3A4455"
        app:layout_constraintBottom_toBottomOf="@+id/label_valid"
        app:layout_constraintEnd_toEndOf="@+id/edittext_card_number"
       />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/label_valid"
        app:layout_constraintTop_toBottomOf="@+id/label_valid" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/materialDivider"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="@+id/month"
        app:layout_constraintStart_toStartOf="@+id/month"
        app:layout_constraintTop_toBottomOf="@+id/month" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toEndOf="@+id/month"
        app:layout_constraintTop_toTopOf="@+id/month" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/materialDivider1"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="@+id/year"
        app:layout_constraintStart_toStartOf="@+id/year"
        app:layout_constraintTop_toBottomOf="@+id/year" />

    <EditText
        android:id="@+id/cvv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/white"
        android:inputType="numberPassword"
        android:maxLength="3"

        app:layout_constraintBottom_toBottomOf="@+id/year"
        app:layout_constraintEnd_toEndOf="@+id/label_cvv"
        app:layout_constraintStart_toEndOf="@+id/label_valid"
        app:layout_constraintTop_toTopOf="@+id/year" />


    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/materialDivider3"
        android:layout_width="0dp"
        android:layout_height="2dp"
        app:layout_constraintEnd_toEndOf="@+id/cvv"
        app:layout_constraintStart_toStartOf="@+id/cvv"
        app:layout_constraintTop_toBottomOf="@+id/cvv" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/label_card_holder_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/titania_regular"
        android:text="@string/card_holder_s_name"
        android:textColor="#3A4455"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/month"
        app:layout_constraintTop_toBottomOf="@+id/materialDivider1" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edittext_card_holder_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/titania_regular"
        android:backgroundTint="#3A4455"
        android:inputType="textCapCharacters"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_card_holder_name" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_continue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/btn_selector"
        android:text="@string/pay_now"
        android:fontFamily="@font/titania_regular"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>