<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/card_back">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="top"
        android:background="@color/white"
        android:contentInsetStart="0dp"
        android:contentInsetLeft="0dp"
        android:contentInsetEnd="0dp"
        android:contentInsetRight="0dp"
        android:elevation="5dp"
        app:contentInsetEnd="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetStart="0dp"
        app:layout_collapseMode="pin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:gravity="center_vertical">


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/image_back" />

            <com.myecommerce.utils.views.CustomView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:text="@string/payment_method"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="25dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toTopOf="@+id/btn_continue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp"
            android:gravity="center_vertical"
            app:layout_constraintTop_toTopOf="@+id/cardView"
            tools:layout_editor_absoluteX="10dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:src="@drawable/image_credit_card"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/btn_credit_card"
                android:layout_width="0dp"
                android:layout_height="24dp"
                android:layout_marginEnd="20dp"
                android:checked="true"
                android:fontFamily="@font/titania_regular"
                android:layoutDirection="rtl"
                android:text="@string/credit_card"
                android:textColor="@color/text_back"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/img_card"
                app:layout_constraintLeft_toRightOf="@+id/img_card"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/img_card" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/materialDividerCreditCard"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_card" />


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_cash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:src="@drawable/image_rupee"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/materialDividerCreditCard" />


            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/btn_cash"
                android:layout_width="0dp"
                android:layout_height="24dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/titania_regular"
                android:layoutDirection="rtl"
                android:text="@string/cash"
                android:textColor="@color/text_back"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/img_cash"
                app:layout_constraintLeft_toRightOf="@+id/img_cash"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/img_cash" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/materialDividerCash"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_cash" />


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_qr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:src="@drawable/img_qr"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/materialDividerCash" />

            <RadioButton
                android:id="@+id/btn_qr"
                android:layout_width="0dp"
                android:layout_height="24dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/titania_regular"
                android:layoutDirection="rtl"
                android:text="@string/qr_scan"
                android:textColor="@color/text_back"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/img_qr"
                app:layout_constraintLeft_toRightOf="@+id/img_qr"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/img_qr" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/materialDividerQr"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_qr" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_wallet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:src="@drawable/img_wallet"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/materialDividerQr" />


            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/btn_wallet"
                android:layout_width="0dp"
                android:layout_height="24dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/titania_regular"
                android:layoutDirection="rtl"
                android:text="@string/wallet"
                android:textColor="@color/text_back"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/img_wallet"
                app:layout_constraintLeft_toRightOf="@+id/img_wallet"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/img_wallet" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/materialDividerWallet"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_wallet" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_continue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/btn_selector"
        android:fontFamily="@font/titania_regular"
        android:text="@string/continuee"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>